fix prev/next link padding on small screens

--- a/css/modules.css
+++ b/css/modules.css
@@ -57,7 +57,7 @@ ul.posts .meta {
     display: block;
     text-decoration: none;
     text-align: center;
-    padding: 0.25em 0;
+    padding: 0.25em 1.4em;
 }
 
 .post .link-prev .title {
@@ -89,12 +89,14 @@ ul.posts .meta {
         float: left;
         padding-right: 2%;
         text-align: left;
+        padding-left: 0;
     }
 
     .post .link-next {
         width: 48%;
         float: right;
         padding-left: 2%;
+        padding-right: 0;
         text-align: right;
     }
 }
